Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - updated travis configs (in this distribution, and minting profile)
            to reflect the new latest Dist::Zilla version in the 5.x series

0.137     2018-04-01 22:55:32Z
          - fixed $TODO in xt/author-changes_has_content.t

0.136     2018-03-22 04:19:40Z
          - add new xt/author/changes_has_content.t that calls
            xt/release/changes_has_content.t if not on master branch (for
            verifying that pull requests contain a Changes entry)
          - bump minimum required version of [Test::MinimumVersion], to get
            recent change from xt/release -> xt/author

0.135     2018-03-04 19:47:45Z
          - fix CONTRIBUTING template that might sometimes generate an
            undefined warning (tickling tests with AUTHOR_TESTING=1 under
            Text::Template 1.48)

0.134     2018-03-03 08:44:42Z
          - always report installed version of Encode in
            t/00-report-prereqs.t, as it is called by core code (PerlIO).

0.133     2018-01-14 08:25:00Z
          - new 'plugin_prereq_phase' and 'plugin_prereq_relationship'
            configuration options, which control whether and how to inject
            plugins used by this bundle into distribution prerequisites
          - plugins used in the distribution build are now injected into
            x_Dist_Zilla/requires by default, rather than develop/suggests

0.132     2017-12-13 07:15:09Z
          - fix test to work with [@Git::VersionManager] 0.003

0.131     2017-09-16 04:29:15Z
          - spelling fix in generated CONTRIBUTING file (thanks, Edward
            Betts!)
          - added .travis.yml to minting profile
          - plugins used by the bundle are now injected into develop-suggests
            prerequisites, rather than develop-requires, so Travis no longer
            feels obliged to install them when testing the built distribution

0.130     2017-08-28 01:13:46Z